# GPU-Performance-Optimizer

./: CMakeLists.txt  Dockerfile  README.md  config.yaml  install.py  run_benchmarks.py
python/: bench.py
tests/: test_bench.py
